--- a/1TheUltimateLamp.csproj
+++ b/1TheUltimateLamp.csproj
@@ -315,6 +315,7 @@
     <Compile Include="Assets\Scripts\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\ChangeScene.cs" />
     <Compile Include="Assets\Scripts\DeathScript.cs" />
+    <Compile Include="Assets\Scripts\DestroyWeb.cs" />
     <Compile Include="Assets\Scripts\ExitGame.cs" />
     <Compile Include="Assets\Scripts\ExplosionScript.cs" />
     <Compile Include="Assets\Scripts\LampScript.cs" />
@@ -325,6 +326,7 @@
     <Compile Include="Assets\Scripts\PollenScript.cs" />
     <Compile Include="Assets\Scripts\ResetData.cs" />
     <Compile Include="Assets\Scripts\ReturnToGame.cs" />
+    <Compile Include="Assets\Scripts\SpawnEverything.cs" />
     <Compile Include="Assets\Scripts\SpawnPollen.cs" />
     <Compile Include="Assets\Scripts\StoreButton.cs" />
     <Compile Include="Assets\Scripts\StoreScript.cs" />
