--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,16 +57,20 @@
      <Compile Include="Assets\Scripts\CameraMovement.cs" />
      <Compile Include="Assets\Scripts\ChangeScene.cs" />
      <Compile Include="Assets\Scripts\DeathScript.cs" />
+     <Compile Include="Assets\Scripts\DestroyWeb.cs" />
      <Compile Include="Assets\Scripts\ExitGame.cs" />
      <Compile Include="Assets\Scripts\ExplosionScript.cs" />
      <Compile Include="Assets\Scripts\LampScript.cs" />
      <Compile Include="Assets\Scripts\Manager.cs" />
+     <Compile Include="Assets\Scripts\Moth.cs" />
      <Compile Include="Assets\Scripts\ParallaxScript.cs" />
      <Compile Include="Assets\Scripts\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\PollenScript.cs" />
      <Compile Include="Assets\Scripts\ResetData.cs" />
-     <Compile Include="Assets\Scripts\SaveEverything.cs" />
+     <Compile Include="Assets\Scripts\ReturnToGame.cs" />
+     <Compile Include="Assets\Scripts\SpawnEverything.cs" />
      <Compile Include="Assets\Scripts\SpawnPollen.cs" />
+     <Compile Include="Assets\Scripts\StoreButton.cs" />
      <Compile Include="Assets\Scripts\StoreScript.cs" />
      <Compile Include="Assets\Scripts\WinScript.cs" />
      <None Include="Assets\Free Pack\Metal Loop Pack\readme Unity.txt" />
@@ -75,22 +79,22 @@
      <None Include="Assets\Free Pack\Tropical Moments\Tropical Moments readme.txt" />
      <None Include="Assets\Free Pack\Rock Stingers Pack\Unity Readme.txt" />
  <Reference Include="Unity.ProGrids">
- <HintPath>E:/1TheUltimateLamp/Library/ScriptAssemblies/Unity.ProGrids.dll</HintPath>
+ <HintPath>C:/Users/codyc/Desktop/Game Design stuff/1TheUltimateLamp/Library/ScriptAssemblies/Unity.ProGrids.dll</HintPath>
  </Reference>
  <Reference Include="Unity.ProGrids.Editor">
- <HintPath>E:/1TheUltimateLamp/Library/ScriptAssemblies/Unity.ProGrids.Editor.dll</HintPath>
+ <HintPath>C:/Users/codyc/Desktop/Game Design stuff/1TheUltimateLamp/Library/ScriptAssemblies/Unity.ProGrids.Editor.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.StandardEvents">
- <HintPath>E:/1TheUltimateLamp/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
+ <HintPath>C:/Users/codyc/Desktop/Game Design stuff/1TheUltimateLamp/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro.Editor">
- <HintPath>E:/1TheUltimateLamp/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+ <HintPath>C:/Users/codyc/Desktop/Game Design stuff/1TheUltimateLamp/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.PackageManagerUI.Editor">
- <HintPath>E:/1TheUltimateLamp/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+ <HintPath>C:/Users/codyc/Desktop/Game Design stuff/1TheUltimateLamp/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro">
- <HintPath>E:/1TheUltimateLamp/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+ <HintPath>C:/Users/codyc/Desktop/Game Design stuff/1TheUltimateLamp/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.AIModule">
  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
